[package]
name = "twitter-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"twitter-v2" = "0.1"
dotenv = "0.14"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
chrono = "0.4"
lazy_static = "1.4.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "twitter-tools"
path = "src/main.rs"
